[gd_scene load_steps=4 format=3 uid="uid://dilwbayroubkq"]

[ext_resource type="PackedScene" uid="uid://b6md8chi0dh86" path="res://scenes/ui/layout_creator.tscn" id="1_86jg6"]
[ext_resource type="Script" uid="uid://b1slvht1kght8" path="res://scripts/start_training_menu.gd" id="1_ea515"]
[ext_resource type="Script" uid="uid://b8wtl1g6jp5g" path="res://scripts/track_selector.gd" id="2_cuvc6"]

[node name="StartTrainingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ea515")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LayoutCreator" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_86jg6")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("2_cuvc6")

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Start
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/OptionButton" to="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/OptionButton" method="_on_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
